@@ -1,5 +1,5 @@
 [buildout]
-develop = .
+develop = . ../zope.password
 parts = test
 
 [test]
