@@ -17,8 +17,6 @@ $Id$
 """
 __docformat__ = 'restructuredtext'
 
-from zope.app.component.vocabulary import UtilityVocabulary
-
 # BBB: the password managers were moved into zope.password package.
 from zope.password.password import (
     PlainTextPasswordManager,
@@ -27,6 +25,7 @@ from zope.password.password import (
     SSHAPasswordManager
     )
 from zope.password.interfaces import IPasswordManager
+from zope.password.vocabulary import PasswordManagerNamesVocabulary
 
 # Simple registry used by mkzopeinstance script
 managers = [
@@ -35,10 +34,3 @@ managers = [
     ("SHA1", SHA1PasswordManager()),
     ("SSHA", SSHAPasswordManager()),
 ]
-
-
-class PasswordManagerNamesVocabulary(UtilityVocabulary):
-    """Vocabulary of password managers."""
-
-    interface = IPasswordManager
-    nameOnly = True
