@@ -2,10 +2,4 @@
 
   <include package="zope.password" />
 
-  <utility
-      component=".password.PasswordManagerNamesVocabulary"
-      provides="zope.schema.interfaces.IVocabularyFactory"
-      name="Password Manager Names"
-      />
-
 </configure>
